Cherry-pick r240325. rdar://problem/47494727

Regression(r240178) Some API tests are crashing
    https://bugs.webkit.org/show_bug.cgi?id=193680

    Reviewed by Alex Christensen.

    r240178 made sure that userScripts / scriptMessageHandlers / contentExtensions are always
    properly populated in the WebPageCreationParameters. This was needed in case we need to
    reconstruct the WebUserContentController on the WebProcess side. However, this caused a
    regression in the case we reuse a process where the WebUserContentController still exists
    (because it was kept alive, e.g. by the WebPageGroup). In that case, we would add duplicate
    entries to the existing WebUserContentController instance because its "add" methods did not
    have duplicate checks. To address the issue, this patch adds duplicate checks to the
    WebUserContentController "add" methods.

    * WebProcess/UserContent/WebUserContentController.cpp:
    (WebKit::WebUserContentController::addUserScriptMessageHandlerInternal):
    (WebKit::WebUserContentController::removeUserScriptMessageHandlerInternal):
    (WebKit::WebUserContentController::addUserScriptInternal):
    (WebKit::WebUserContentController::removeUserScriptInternal):
    (WebKit::WebUserContentController::addUserStyleSheetInternal):
    (WebKit::WebUserContentController::removeUserStyleSheetInternal):
    (WebKit::WebUserContentController::forEachUserMessageHandler const):
    * WebProcess/UserContent/WebUserContentController.h:

    Canonical link: https://commits.webkit.org/208223@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240325 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.129@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@240425 268f45cc-cd09-0410-ab3c-d52691b4dbfc